[package]
name = "rcli"
version = "0.1.0"
authors = ["chaotang <chaotang1001@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
serde_yaml = "0.9.33"
